--- a/mysite/chat/templates/chat/room.html
+++ b/mysite/chat/templates/chat/room.html
@@ -3,7 +3,13 @@
 {{request.user.username}}
 
 
-<div id="chat-messages"></div>
+<div id="chat-messages">
+   {% for message in messages %}
+            <p>{{message.user.username}}:  {{ message.message_content }}</p>
+
+     {% endfor %}
+
+</div>
 
 <form method="post">
 
